--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qteaVfww&k=Job&j=otXW9fwf&__jvst=Employee&__jvsd=sHNvxgwh&__jvsc=Twitter&bid=nEBAWLw1'>SparkPost Careers - Front End Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-29</p>
+<hr/>
 <h5><a href='https://hetzner.recruitee.com/o/frontend-development-lead'>
       Front-end Development Lead - xneelo
     </a></h5> 
@@ -256,7 +260,7 @@ have?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intellectsoft.workable.com/j/971E7D2C95'>Intellectsoft - Jobs: Middle Front-end (Angular) - Apply online</a></h5> 
+<h5><a href='https://intellectsoft.workable.com/j/971E7D2C95'>Intellectsoft - Jobs: Middle Front-end (Angular) - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv Palo Alto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -286,7 +290,7 @@ have?...</p>
 apps. Since our launch in May 2012, we've expanded into 19 major cities with 
 over?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... This is an exciting role for an engineer to come in and develop the major UI 
 features in a rapidly growing startup. We build for perfection, use the most 
@@ -301,7 +305,7 @@ industry-leading SaaS based platform that solves a suite of provider data?...</p
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://dataguard.join.com/jobs/273365-praktikum-frontend-developer-m-w-d'>Job @ DataGuard (Munich): Praktikum Frontend Devel... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dataguard.join.com/jobs/273365-praktikum-frontend-developer-m-w-d'>Job @ DataGuard (Munich): Praktikum Frontend Devel... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -332,7 +336,7 @@ If you're looking for a career with a purpose, you've come to the right place.</
 software engineers and academics implementing change in the financial industry
 .</p>
 <hr/>
-<h5><a href='https://spotdraft.freshteam.com/jobs/pIcQa4qNp-lH/frontend-engineer'>Frontend Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://spotdraft.freshteam.com/jobs/pIcQa4qNp-lH/frontend-engineer'>Frontend Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Frontend Engineer. Bengaluru, Karnataka | Full time. Apply Now. SpotDraft is 
 built as a Single Page App using Angular (2+) and React application. We are?...</p>
@@ -341,7 +345,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qXWaVfwI&k=Job&j=o0IDafwf&__jvst=Employee+Referral&__jvsd=sP0W7gwD&__jvsc=Twitter&bid=nhESVLwY'>Ramsey Solutions Careers - Senior Frontend Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qXWaVfwI&k=Job&j=o0IDafwf&__jvst=Employee+Referral&__jvsd=sP0W7gwD&__jvsc=Twitter&bid=nhESVLwY'>Ramsey Solutions Careers - Senior Frontend Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -394,7 +398,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://futrli.workable.com/j/30D409C576?viewed=true'>Lead Frontend Engineer - Apply online - Futrli - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/30D409C576?viewed=true'>Lead Frontend Engineer - Apply online - Futrli - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of Lead Frontend Engineer at Futrli.</p>
 <hr/>
@@ -460,11 +464,6 @@ generation web and mobile components and interfaces. Develop new ways of?...</p>
 <h5><a href='https://jobs.crelate.com/portal/labineassociates/job/7sx4k69rsmsjrryggdifk17qfh'>Sitecore Front End Developer (Hollywood, Florida) | Job Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://caterwings.join.com/jobs/253685-frontend-developer-m-f'>Job @ CaterWings (Berlin): Frontend Developer (m/f) | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 14, 2019 ... CaterWings has a job opening for Frontend Developer (m/f) in Berlin (published: 
-30.04.2019). Apply now or check the other available jobs.</p>
 <hr/>
 
 
